[gd_scene load_steps=10 format=3 uid="uid://fhdjnirmqq8f"]

[ext_resource type="Script" path="res://gobler.gd" id="1_nlimq"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rwkma"]
roughness = 0.45

[sub_resource type="Animation" id="Animation_lvm7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCombiner3D/CSGSphere3D/CSGSphere3D2:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.28344]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGCombiner3D/CSGSphere3D/CSGSphere3D3:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.94247]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CSGCombiner3D/CSGSphere3D2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-2.10454, 2.7339, 6.03153)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CSGCombiner3D/CSGSphere3D2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m3i43"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCombiner3D/CSGSphere3D/CSGSphere3D3:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.166667, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.94247, 15.011]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CSGCombiner3D/CSGSphere3D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-2.10454, 2.7339, 6.03153), Vector3(-2.10454, 2.7339, 4.87421)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CSGCombiner3D/CSGSphere3D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_80qr3"]
resource_name = "open"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CSGCombiner3D/CSGSphere3D/CSGSphere3D2:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.28344, 2.35616]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ic3xg"]
_data = {
"RESET": SubResource("Animation_lvm7v"),
"die": SubResource("Animation_m3i43"),
"open": SubResource("Animation_80qr3")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_18eon"]
transparency = 4
shading_mode = 2
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_fwxpw"]
radius = 28.4035

[sub_resource type="SphereShape3D" id="SphereShape3D_ndab8"]
radius = 1.30374

[node name="Gobler" type="CharacterBody3D"]
collision_layer = 16
collision_mask = 16
script = ExtResource("1_nlimq")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D"]
radius = 6.99118
radial_segments = 24
rings = 16
material = SubResource("StandardMaterial3D_rwkma")

[node name="CSGSphere3D2" type="CSGSphere3D" parent="CSGCombiner3D/CSGSphere3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.14123)
operation = 2
radius = 1.28344
radial_segments = 24
rings = 16

[node name="CSGSphere3D3" type="CSGSphere3D" parent="CSGCombiner3D/CSGSphere3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.14312)
operation = 2
radius = 2.94247
radial_segments = 16
rings = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="CSGCombiner3D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ic3xg")
}
autoplay = "open"

[node name="CSGSphere3D2" type="CSGSphere3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.10454, 2.7339, 6.03153)
material = SubResource("StandardMaterial3D_18eon")

[node name="CSGSphere3D3" type="CSGSphere3D" parent="CSGCombiner3D/CSGSphere3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.11706, 0, 0)
material = SubResource("StandardMaterial3D_18eon")

[node name="eat" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="eat"]
shape = SubResource("SphereShape3D_fwxpw")

[node name="eat2" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="eat2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.55415)
shape = SubResource("SphereShape3D_ndab8")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.1
one_shot = true

[connection signal="animation_finished" from="CSGCombiner3D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="eat" to="." method="_on_eat_body_entered"]
[connection signal="body_entered" from="eat2" to="." method="_on_eat_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
